@@ -995,7 +995,7 @@ public class Standard extends Item
 	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
 	 *       It can be customized with the tag <tt>@cope.get public|package|protected|private|none|non-final</tt> in the comment of the field.
 	 */
-	final java.lang.Double getDefaultFeature()
+	final java.lang.Double get()
 	{
 		return Standard.defaultFeature.get(this);
 	}/**
@@ -1005,7 +1005,7 @@ public class Standard extends Item
 	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
 	 *       It can be customized with the tag <tt>@cope.set public|package|protected|private|none|non-final</tt> in the comment of the field.
 	 */
-	final void setDefaultFeature(final java.lang.Double defaultFeature)
+	final void set(final java.lang.Double defaultFeature)
 			throws
 				com.exedio.cope.UniqueViolationException,
 				com.exedio.cope.DoubleRangeViolationException
@@ -1032,7 +1032,7 @@ public class Standard extends Item
 	 *       It can be customized with the tag <tt>@cope.findBy public|package|protected|private|none|non-final</tt> in the comment of the field.
 	 */
 	@Deprecated
-	static final Standard findByDefaultFeature(final java.lang.Double defaultFeature)
+	static final Standard findBy(final java.lang.Double defaultFeature)
 	{
 		return Standard.defaultFeature.searchUnique(Standard.class,defaultFeature);
 	}/**
